Bug 2004018 - Allow the Windows App SDK to handle WM_WINDOWPOSCHANGED. r=gstoll,win-reviewers

Otherwise we might end up with a mispositioned child window that it uses
internally to handle non-client events.

Differential Revision: https://phabricator.services.mozilla.com/D275357